--- a/packages/canvas/package.json
+++ b/packages/canvas/package.json
@@ -13,14 +13,11 @@
   "scripts": {
     "start": "tsdx watch",
     "build": "tsdx build",
-    "test": "tsdx test --passWithNoTests",
+    "test": "tsdx test",
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "size": "size-limit",
     "analyze": "size-limit --why"
-  },
-  "peerDependencies": {
-    "react": ">=16"
   },
   "husky": {
     "hooks": {
@@ -33,26 +30,22 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "demo",
+  "name": "canvas",
   "author": "jckr",
-  "module": "dist/demo.esm.js",
+  "module": "dist/canvas.esm.js",
   "size-limit": [
     {
-      "path": "dist/demo.cjs.production.min.js",
+      "path": "dist/canvas.cjs.production.min.js",
       "limit": "10 KB"
     },
     {
-      "path": "dist/demo.esm.js",
+      "path": "dist/canvas.esm.js",
       "limit": "10 KB"
     }
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^5.0.1",
-    "@types/react": "^17.0.14",
-    "@types/react-dom": "^17.0.9",
     "husky": "^7.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "size-limit": "^5.0.1",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.0",
