--- a/packages/controls/package.json
+++ b/packages/controls/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "controls",
+  "name": "@js-sim/controls",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@js-sim/core": "^0.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
