--- a/packages/controls/package.json
+++ b/packages/controls/package.json
@@ -2,6 +2,7 @@
   "name": "@sim/controls",
   "author": "jckr",
   "version": "0.1.0",
+  "license": "MIT",
   "dependencies": {
     "@js-sim/core": "^0.1.1",
     "@rebass/forms": "^4.0.6",
