--- a/packages/canvas/package.json
+++ b/packages/canvas/package.json
@@ -52,7 +52,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "@js-sim/core": "^0.1.1"
+    "@sim/core": "^0.1.0"
   },
-  "gitHead": "b799082b7941f62489be0e207c92e884b5c3a878"
+  "gitHead": "74a4c738ae86686126bc7ba13aea9f5a878264b3"
 }
