--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -51,5 +51,18 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.3.0",
     "typescript": "^4.3.5"
-  }
+  },
+  "description": "Congrats! You just saved yourself hours of work by bootstrapping this project with TSDX. Let’s get you oriented with what’s here and how to use it.",
+  "directories": {
+    "example": "example",
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jckr/sim.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jckr/sim/issues"
+  },
+  "homepage": "https://github.com/jckr/sim#readme"
 }
